<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LIFT</string>
    <string name="action_settings">Settings</string>
    <string name="workout">WORKOUT</string>
    <string name="overview">OVERVIEW</string>
    <string name="connect">CONNECT</string>
    <string name="settings">SETTINGS</string>
    <string name="workout_activity_title">Workout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set_view">SetViewActivity</string>
    <string name="click_exercise_button">></string>
    <string name="target_weight">Target Weight (kg)</string>
    <string name="target_reps">Target Reps</string>
    <string name="reps_completed">Reps Completed</string>
    <string name="set_notes">Type notes on your set here...</string>
    <string name="set_notes_label">Notes:</string>
    <string name="finish_workout">Finish Workout</string>
    
    <string name="test">TEST</string>
    <string name="search_string">Search exercises...</string>
    <string name="next_string">Next</string>
    <string name="wod_list_button">WODs</string>
    <string name="create_a_workout_button">Create a Workout</string>
    <string name="select_sets_reps_button">Next</string>
    
    <!-- Activity Titles -->
    <string name="title_activity_wod">Workout of the Day</string>
    <string name="title_activity_wod_list">Select A Workout</string>
    <string name="title_activity_create_a_workout">Create a Workout</string>
    <string name="title_activity_custom_workout">Your Workout</string>

</resources>
